--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -97,48 +97,68 @@ code {
 }
 
 :root {
-  --radius: 0.625rem;
   --background: oklch(1 0 0);
-  --foreground: oklch(0.145 0 0);
+  --foreground: oklch(0.1450 0 0);
   --card: oklch(1 0 0);
-  --card-foreground: oklch(0.145 0 0);
+  --card-foreground: oklch(0.1450 0 0);
   --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.145 0 0);
-  --primary: oklch(0.546 0.245 262.881);
-  --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.92 0.004 286.32);
-  --secondary-foreground: oklch(0.205 0 0);
-  --muted: oklch(0.967 0.001 286.375);
-  --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.92 0.004 286.32);
-  --accent-foreground: oklch(0.205 0 0);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.911 0.006 286.286);
-  --input: oklch(0.871 0.006 286.286);
-  --ring: oklch(0.546 0.245 262.881);
-  --chart-1: oklch(0.546 0.245 262.881);
-  --chart-2: oklch(0.623 0.214 259.815);
-  --chart-3: oklch(0.707 0.165 254.624);
-  --chart-4: oklch(0.809 0.105 251.813);
-  --chart-5: oklch(0.882 0.059 254.128);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.145 0 0);
-  --sidebar-primary: oklch(0.546 0.245 262.881);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.92 0.004 286.32);
-  --sidebar-accent-foreground: oklch(0.205 0 0);
-  --sidebar-border: oklch(0.901 0.006 286.286);
-  --sidebar-ring: oklch(0.546 0.245 262.881);
+  --popover-foreground: oklch(0.1450 0 0);
+  --primary: oklch(0.9073 0.1957 131.1581);
+  --primary-foreground: oklch(0.9850 0 0);
+  --secondary: oklch(0.3234 0.0257 192.0237);
+  --secondary-foreground: oklch(0.2050 0 0);
+  --muted: oklch(0.9700 0 0);
+  --muted-foreground: oklch(0.5560 0 0);
+  --accent: oklch(0.9700 0 0);
+  --accent-foreground: oklch(0.2050 0 0);
+  --destructive: oklch(0.5770 0.2450 27.3250);
+  --destructive-foreground: oklch(1 0 0);
+  --border: oklch(0.9220 0 0);
+  --input: oklch(0.9220 0 0);
+  --ring: oklch(0.7080 0 0);
+  --chart-1: oklch(0.8100 0.1000 252);
+  --chart-2: oklch(0.6200 0.1900 260);
+  --chart-3: oklch(0.5500 0.2200 263);
+  --chart-4: oklch(0.4900 0.2200 264);
+  --chart-5: oklch(0.4200 0.1800 266);
+  --sidebar: oklch(0.9850 0 0);
+  --sidebar-foreground: oklch(0.1450 0 0);
+  --sidebar-primary: oklch(0.2050 0 0);
+  --sidebar-primary-foreground: oklch(0.9850 0 0);
+  --sidebar-accent: oklch(0.9700 0 0);
+  --sidebar-accent-foreground: oklch(0.2050 0 0);
+  --sidebar-border: oklch(0.9220 0 0);
+  --sidebar-ring: oklch(0.7080 0 0);
+  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --radius: 0.625rem;
+  --shadow-x: 0;
+  --shadow-y: 1px;
+  --shadow-blur: 3px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 0.1;
+  --shadow-color: oklch(0 0 0);
+  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+  --tracking-normal: 0em;
+  --spacing: 0.25rem;
   --bg: oklch(1 0 0);
-  --fg: oklch(0.21 0.006 285.885);
-  --primary-fg: oklch(1 0 0);
-  --primary-subtle: oklch(0.623 0.214 259.815 / 0.15);
-  --primary-subtle-fg: oklch(0.488 0.243 264.376);
-  --secondary-fg: oklch(0.141 0.005 285.823);
+  --fg: oklch(0.1450 0 0);
+  --primary-fg: oklch(0.9850 0 0);
+  --primary-subtle: oklch(0.9073 0.1957 131.1581 / 0.15);
+  --primary-subtle-fg: oklch(0.7 0.15 131.1581);
+  --secondary-fg: oklch(0.2050 0 0);
   --overlay: oklch(1 0 0);
-  --overlay-fg: oklch(0.141 0.005 285.823);
-  --accent-fg: oklch(0.141 0.005 285.823);
-  --muted-fg: oklch(0.552 0.016 285.938);
+  --overlay-fg: oklch(0.1450 0 0);
+  --accent-fg: oklch(0.2050 0 0);
+  --muted-fg: oklch(0.5560 0 0);
   --success: oklch(0.596 0.145 163.225);
   --success-fg: oklch(1 0 0);
   --success-subtle: oklch(0.696 0.17 162.48 / 0.15);
@@ -153,11 +173,11 @@ code {
   --danger-fg: oklch(0.971 0.013 17.38);
   --danger-subtle: oklch(0.637 0.237 25.331 / 0.15);
   --danger-subtle-fg: oklch(0.505 0.213 27.518);
-  --navbar: oklch(0.995 0 0);
-  --navbar-fg: oklch(0.141 0.005 285.823);
-  --sidebar-fg: oklch(0.141 0.005 285.823);
-  --sidebar-primary-fg: oklch(1 0 0);
-  --sidebar-accent-fg: oklch(0.141 0.005 285.823);
+  --navbar: oklch(0.9850 0 0);
+  --navbar-fg: oklch(0.1450 0 0);
+  --sidebar-fg: oklch(0.1450 0 0);
+  --sidebar-primary-fg: oklch(0.9850 0 0);
+  --sidebar-accent-fg: oklch(0.2050 0 0);
   --radius-lg: 0.5rem;
   --radius-xs: calc(var(--radius-lg) * 0.5);
   --radius-sm: calc(var(--radius-lg) * 0.75);
@@ -169,47 +189,66 @@ code {
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.205 0 0);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.205 0 0);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.546 0.245 262.881);
-  --primary-foreground: oklch(0.205 0 0);
-  --secondary: oklch(0.244 0.006 286.033);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.21 0.006 285.885);
-  --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.274 0.006 286.033);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(0.270 0.013 285.805);
-  --input: oklch(0.320 0.013 285.805);
-  --ring: oklch(0.546 0.245 262.881);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.623 0.214 259.815);
-  --chart-3: oklch(0.707 0.165 254.624);
-  --chart-4: oklch(0.809 0.105 251.813);
-  --chart-5: oklch(0.882 0.059 254.128);
-  --sidebar: oklch(0.21 0.006 285.885);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(0.546 0.245 262.881);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.274 0.006 286.033);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(0.274 0.006 286.033);
-  --sidebar-ring: oklch(0.546 0.245 262.881);
-  --bg: oklch(0.181 0.005 285.823);
-  --fg: oklch(0.985 0 0);
-  --primary-fg: oklch(1 0 0);
-  --primary-subtle: oklch(0.623 0.214 259.815 / 0.1);
-  --primary-subtle-fg: oklch(0.707 0.165 254.624);
-  --secondary-fg: oklch(0.985 0 0);
-  --overlay: oklch(0.210 0.006 285.885);
-  --overlay-fg: oklch(0.985 0 0);
-  --accent-fg: oklch(0.985 0 0);
-  --muted-fg: oklch(0.705 0.015 286.067);
+  --background: oklch(0.1450 0 0);
+  --foreground: oklch(0.9850 0 0);
+  --card: oklch(0.2050 0 0);
+  --card-foreground: oklch(0.9850 0 0);
+  --popover: oklch(0.2690 0 0);
+  --popover-foreground: oklch(0.9850 0 0);
+  --primary: oklch(0.9220 0 0);
+  --primary-foreground: oklch(0.2050 0 0);
+  --secondary: oklch(0.2690 0 0);
+  --secondary-foreground: oklch(0.9850 0 0);
+  --muted: oklch(0.2690 0 0);
+  --muted-foreground: oklch(0.7080 0 0);
+  --accent: oklch(0.3710 0 0);
+  --accent-foreground: oklch(0.9850 0 0);
+  --destructive: oklch(0.7040 0.1910 22.2160);
+  --destructive-foreground: oklch(0.9850 0 0);
+  --border: oklch(0.2750 0 0);
+  --input: oklch(0.3250 0 0);
+  --ring: oklch(0.5560 0 0);
+  --chart-1: oklch(0.8100 0.1000 252);
+  --chart-2: oklch(0.6200 0.1900 260);
+  --chart-3: oklch(0.5500 0.2200 263);
+  --chart-4: oklch(0.4900 0.2200 264);
+  --chart-5: oklch(0.4200 0.1800 266);
+  --sidebar: oklch(0.2050 0 0);
+  --sidebar-foreground: oklch(0.9850 0 0);
+  --sidebar-primary: oklch(0.4880 0.2430 264.3760);
+  --sidebar-primary-foreground: oklch(0.9850 0 0);
+  --sidebar-accent: oklch(0.2690 0 0);
+  --sidebar-accent-foreground: oklch(0.9850 0 0);
+  --sidebar-border: oklch(0.2750 0 0);
+  --sidebar-ring: oklch(0.4390 0 0);
+  --font-sans: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --radius: 0.625rem;
+  --shadow-x: 0;
+  --shadow-y: 1px;
+  --shadow-blur: 3px;
+  --shadow-spread: 0px;
+  --shadow-opacity: 0.1;
+  --shadow-color: oklch(0 0 0);
+  --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+  --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+  --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
+  --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
+  --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+  --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+  --bg: oklch(0.1450 0 0);
+  --fg: oklch(0.9850 0 0);
+  --primary-fg: oklch(0.2050 0 0);
+  --primary-subtle: oklch(0.9220 0 0 / 0.1);
+  --primary-subtle-fg: oklch(0.9220 0 0);
+  --secondary-fg: oklch(0.9850 0 0);
+  --overlay: oklch(0.2050 0 0);
+  --overlay-fg: oklch(0.9850 0 0);
+  --accent-fg: oklch(0.9850 0 0);
+  --muted-fg: oklch(0.7080 0 0);
   --success: oklch(0.596 0.145 163.225);
   --success-fg: oklch(1 0 0);
   --success-subtle: oklch(0.696 0.17 162.48 / 0.1);
@@ -224,11 +263,11 @@ code {
   --danger-fg: oklch(0.971 0.013 17.38);
   --danger-subtle: oklch(0.637 0.237 25.331 / 0.1);
   --danger-subtle-fg: oklch(0.704 0.191 22.216);
-  --navbar: oklch(0.190 0.006 285.885);
-  --navbar-fg: oklch(0.985 0 0);
-  --sidebar-fg: oklch(0.985 0 0);
-  --sidebar-primary-fg: oklch(1 0 0);
-  --sidebar-accent-fg: oklch(0.985 0 0);
+  --navbar: oklch(0.2050 0 0);
+  --navbar-fg: oklch(0.9850 0 0);
+  --sidebar-fg: oklch(0.9850 0 0);
+  --sidebar-primary-fg: oklch(0.9850 0 0);
+  --sidebar-accent-fg: oklch(0.9850 0 0);
 }
 
 @layer base {
